# polydraw-scad

./: .gitignore  LICENSE  README.md  TODO.md  flake.nix  latern.hs  poly-draw.cabal  poly-garden.cabal  polydraw.cabal
Graphics/: Polydraw.hs
Graphics/Polydraw/: Unicode.hs
examples/openSCAD/: japanese-latern.scad
