cabal-version:       3.0
name:                polydraw
version:             0.1.1
license:             MIT
license-file:        LICENSE
author:              D. Sunshine
maintainer:          david@sunshines.org
category:            Graphics
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall -Werror=incomplete-patterns

library
    import:             warnings
    exposed-modules:    Graphics.Polydraw
    default-extensions: FlexibleContexts
    other-extensions:   UnicodeSyntax
    build-depends:      base, linear
    default-language:   Haskell2010

source-repository head
  type:           git
  location:       https://github.com/dsunshi/polydraw
